# RenderEngine

./: .gitignore  CMakeLists.txt  README  run.sh
image/: bg.psd
src/: CMakeLists.txt  app.h  cellmath.h  config.h  image.h  main.cpp  math.h  raster.cpp  raster.h  tictoc.h
src/test/: drawrect.cpp  drawtriangle.cpp
